# miscellaneous

./: .gitignore  README.md  interview_prep.ipynb  miscellaneous.sln
Coursera-Dotnet-Core/: Week1Notes.md
Coursera-Java-Spring-Boot/: Week2Notes.md
Coursera-Java-Spring-Boot/FinalProject/: DataStructures.java
Coursera-Java-Spring-Boot/FinalProject/data_structures/: pom.xml
Coursera-Java-Spring-Boot/FinalProject/database_connectivity/: pom.xml
Coursera-Java-Spring-Boot/FinalProject/final_project/: pom.xml
Coursera-iOS/1-Introduction-To-Swift/ImageProcessor.playground/: Contents.swift
Coursera-iOS/2-iOS-Basics/Filterer/: ._Filterer.xcodeproj  .gitignore
Coursera-iOS/2-iOS-Basics/Filterer/Filterer/: ._AppDelegate.swift  ._ViewController.swift  Filter.swift  ImageProcessor.swift  ViewController.swift
Coursera-iOS/3-iOS-App-Design/CustomApp/CustomApp/: ContentView.swift  WeatherDetailView.swift  WeatherService.swift
Coursera-iOS/3-iOS-App-Design/JokeGenerator/JokeGenerator/: ContentView.swift  JokeGeneratorApp.swift  JokeService.swift
Coursera-iOS/3-iOS-App-Design/JokeGenerator/JokeGenerator.xcodeproj/: project.pbxproj
Coursera-iOS/3-iOS-App-Design/JokeGeneratorUIKit/JokeGeneratorUIKit/: JokeByCategoryViewController.swift  JokeService.swift  RandomJokeViewController.swift  SceneDelegate.swift  SelectJokeCategoryViewController.swift  ViewController.swift
Coursera-iOS/4-Capstone-iOS-App/MSCSAPI_Xcode7/MSCognitive/: AppDelegate.swift
Coursera-iOS/4-Capstone-iOS-App/QuoteGenerator/: README.md
Coursera-iOS/4-Capstone-iOS-App/QuoteGenerator/QuoteGenerator.xcodeproj/: project.pbxproj
cheatsheets/: bash-cheatsheet.md  crystal-cheatsheet.md  csharp-cheatsheet.md  mojo-cheatsheet.md  python-cheatsheet.html  python-cheatsheet.md
cheatsheets/nim-cheatsheet/: app  app.nim  example.txt  file_operations.nim  nim-cheatsheet.md
coursera-courses/Coursera-Java-Spring-Boot/FinalProject/: README.md
game-dev-miscellaneous/: README.md
game-dev-miscellaneous/raylib-testing/: README.md
game-dev-miscellaneous/raylib-testing/c-raylib-testing/: CMakeLists.txt  main.c
game-dev-miscellaneous/raylib-testing/cpp-raylib-testing/: CMakeLists.txt  main.cpp
game-dev-miscellaneous/raylib-testing/crystal-raylib-testing/: .gitignore  main.cr  shard.yml
game-dev-miscellaneous/raylib-testing/csharp-raylib-testing/: .gitignore  Program.cs  csharp-raylib-testing.csproj
game-dev-miscellaneous/raylib-testing/java-gradle-raylib-testing/: settings.gradle
game-dev-miscellaneous/raylib-testing/java-jar-raylib-testing/: Demo.java
game-dev-miscellaneous/raylib-testing/nim-raylib-testing/: main  main.nim  nim_raylib_testing.nimble
game-dev-miscellaneous/raylib-testing/nodejs-raylib-testing/: .gitignore  index.js  package-lock.json  package.json
game-dev-miscellaneous/raylib-testing/python-raylib-testing/: main.py
game-dev-miscellaneous/raylib-testing/ruby-raylib-testing/: Gemfile  main.rb
game-dev-miscellaneous/raylib-testing/swift-raylib-test/: Package.swift
game-dev-miscellaneous/sfml-testing/: .gitignore  README.md
game-dev-miscellaneous/sfml-testing/sfml-cmake-sources-static-testing/: CMakeLists.txt  main.cpp
game-dev-miscellaneous/sfml-testing/sfml-cmake-sources-testing/: CMakeLists.txt  main.cpp
game-dev-miscellaneous/sfml-testing/sfml-cmake-testing/: .gitignore  CMakeLists.txt  main.cpp
guessing-game/: guessing_game  guessing_game.cpp  guessing_game.java  guessing_game.py  guessing_game.swift
pong-pygame/: ball.py  bat.py  draw.py  enemy_bat.py  game.py  game2.py  logic.py  main.py  player_bat.py
problem-solving/: MergeStringsAlternately.java  ReverseSentenceWords.java
python-text-encoder/: DECODED.txt  ENCODED.txt  main.py
(+138 files in other folders)
